j--/tests/fail/UnaryPlus.java
package fail;

public class UnaryPlus {

	public static void main(String[] args) {
		System.out.println(+'a');

	}

}
